feign + ribbon : implements my own loadbanlance rule .

--- a/person-client/src/main/resources/application.properties
+++ b/person-client/src/main/resources/application.properties
@@ -15,4 +15,5 @@ eureka.client.serviceUrl.defaultZone=\
 ## 关闭管理安全
 management.security.enabled = false
 
-
+## ribbon : server list
+person-service.ribbon.listOfServers= http://localhost:9090,http://localhost:9091,http://localhost:9092
