--- a/person-service-provider/src/main/resources/application.properties
+++ b/person-service-provider/src/main/resources/application.properties
@@ -15,4 +15,12 @@ eureka.client.serviceUrl.defaultZone=\
 ## 关闭管理安全
 management.security.enabled = false
 
+## Zipkin 服务器配置
+zipkin.server.host = localhost
+zipkin.server.port = 23456
+
+## 增加 ZipKin 服务器地址
+spring.zipkin.base-url = \
+  http://${zipkin.server.host}:${zipkin.server.port}/
+
 
