--- a/person-client/src/main/resources/application.properties
+++ b/person-client/src/main/resources/application.properties
@@ -21,10 +21,10 @@ management.security.enabled = false
 ## hystrix
 # hystrix.
 
-## Zipkin 服务器配置
-zipkin.server.host = localhost
-zipkin.server.port = 23456
-
-## 增加 ZipKin 服务器地址
-spring.zipkin.base-url = \
-  http://${zipkin.server.host}:${zipkin.server.port}/
+### Zipkin 服务器配置
+#zipkin.server.host = localhost
+#zipkin.server.port = 23456
+#
+### 增加 ZipKin 服务器地址
+#spring.zipkin.base-url = \
+#  http://${zipkin.server.host}:${zipkin.server.port}/
